compiler/testData/cli/jvm/_internalArgCommonChecks/internalArgDisableLanguageFeature.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-GenericInlineClassParameter

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/_internalArgCommonChecks/internalArgDisableLanguageFeature.kt:2:34: error: the feature "generic inline class parameter" is disabled
value class Holder<T>(val value: T)
                                 ^
COMPILATION_ERROR
